--- a/app/views/pages/charity.html.erb
+++ b/app/views/pages/charity.html.erb
@@ -1,3 +1,6 @@
-<div class="container">
-  <h1>CHARITY</h1>
+
+<div class="banner-container">
+  <div class="page-banner banner-image-charity">
+    <h1 class="page-title">CHARITY</h1>
+  </div>
 </div>
