--- a/app/views/pages/corporate.html.erb
+++ b/app/views/pages/corporate.html.erb
@@ -1,25 +1,5 @@
-<div class="container">
-  <h1>CORPORATE</h1>
-  <p>
-  Corporate Options
-
-Standup comedy is good, bands are fun, but there’s no better corporate event than a properly organised quiz. Whether it’s breaking the ice with the new guy, building bridges with sales, or getting into a heated debate about the countries of South America with the CEO, a quiz is the best leveller out there. We are proud to say we tailor each quiz to cater for the wishes of every single client ensuring a roaring good time.
-
-Our quizzing technology means we can perform quizzes for many more people than pen and paper,  having hosted fantastic events for 500+ people.
-
-To find out more information, including pricing, please contact us here.
-
-Who we’ve worked with
-
-CBRE
-Napster
-The Independent
-Skin+Me
-Wagamama
-Skybound
-Norges Bank
-Aon
-BNP Paribas
-Amtrust
-</p>
+<div class="banner-container">
+  <div class="banner-image-corporate">
+    <h1 class="page-title">CORPORATE</h1>
+  </div>
 </div>
