--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,3 @@
-
 <%# CAROUSEL WITH BACKGROUND IMAGES + LOGO AND BUTTONS %>
 <div class="top">
   <div id="home-page-carousel" class="carousel slide" data-bs-ride="carousel" data-bs-pause="false">
@@ -65,7 +64,7 @@
       </div>
       <div class="carousel-item" data-multiple-images-target="card3">
         <div class="card category-card col-lg-3 col-md-6 col-sm-12 border-0 bg-transparent">
-          <%= link_to venues_path do %>
+          <%= link_to charity_path do %>
           <%= image_tag("landing_page/quizzing_section/3.jpg", class: "card-img", alt: "Card image") %>
           <div class="card-img-overlay category-card-image">
             <h4 class="card-title font-weight-bold">CHARITY</h4>
@@ -75,7 +74,7 @@
       </div>
       <div class="carousel-item" data-multiple-images-target="card4">
         <div class="card category-card col-lg-3 col-md-6 col-sm-12 border-0 bg-transparent">
-          <%= link_to venues_path do %>
+          <%= link_to private_path do %>
           <%= image_tag("landing_page/quizzing_section/5.jpg", class: "card-img", alt: "Card image") %>
           <div class="card-img-overlay category-card-image">
             <h4 class="card-title font-weight-bold">PRIVATE</h4>
@@ -85,7 +84,7 @@
       </div>
       <div class="carousel-item" data-multiple-images-target="card5">
         <div class="card category-card col-lg-3 col-md-6 col-sm-12 border-0 bg-transparent">
-          <%= link_to venues_path do %>
+          <%= link_to virtual_path do %>
           <%= image_tag("landing_page/quizzing_section/6.jpg", class: "card-img", alt: "Card image") %>
           <div class="card-img-overlay category-card-image">
             <h4 class="card-title font-weight-bold">VIRTUAL</h4>
