--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -1,28 +1,13 @@
 <%# top section with banner and punters text %>
 <div class="banner-container">
-  <div class="banner-image-venues"></div>
-  <div class="container-lg d-flex justify-content-center">
-    <div class="punters-text-overlay col-lg-8 col-md-8 col-sm-12 d-flex flex-column">
-      <h1 class="d-flex justify-content-center mt-5 mb-3">COME QUIZ WITH US</h1>
-      <div class="text-bubble-orange">
-        <p>
-          Fancy the funnest challenge you can have in a pub? Fancy winning loads of prizes?
-          Fancy learning something whilst damaging close friendships? Sick of the same egg heads winning every week?
-        </p>
-        <p> If yes, Quiz Dog has you covered.</p>
-        <p>
-          We have venues all across London (and one in America) that blow the rest out of the water. Everything’s done on your phone too,
-          because we want to save this planet one sheet of paper at a time! And with our anti-cheating measures, you can’t lose (unless you score fewer points than the other teams)!!!
-        </p>
-        <p class=" mb-0">Check our venues page to find your closest Quiz Dog event.</p>
-      </div>
-    </div>
+  <div class="page-banner banner-image-find-us">
+    <h1 class="page-title">FIND US</h1>
   </div>
 </div>
 
 <%# MAP and VENUE CARDS %>
 <div class="container-lg d-flex flex-column align-items-center" data-controller="select-card">
-  <h1 class="d-flex justify-content-center mt-5 mb-3">OUR PUBS</h1>
+  <h1 class="d-flex justify-content-center">OUR PUBS</h1>
     <div id="map" class="mb-4"
       data-controller="map"
       data-map-markers-value="<%= @markers.to_json %>"
