--- a/app/assets/stylesheets/pages/_venues_index.scss
+++ b/app/assets/stylesheets/pages/_venues_index.scss
@@ -20,11 +20,8 @@
   text-align: center;
 }
 
-.banner-image-venues {
-  background-image: url('quizzing-3.jpg'), linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4));
-  height: 60vh;
-  background-size: cover;
-  background-position: center;
+.banner-image-find-us {
+  background-image: url('find_us/find_us_header.jpg'), linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4));
   // position: relative;
 }
 
@@ -34,11 +31,14 @@
 }
 
 #map {
-  height: 100vh;
-  width: 70%;
-  height: 300px;
-  border-radius: 5px;
+  height: 40vh;
+  width: 90%;
+  border-radius: $br;
   top: 0;
+
+  @include media(tabletAndUp) {
+    width: 70%;
+  }
 }
 
 .mapboxgl-popup-tip {
@@ -72,17 +72,10 @@
     grid-template-columns: 1fr;
   }
 
-  .banner-image-venues {
-    background-image: none;
-    background-color: $yellow;
+  .banner-container {
+    margin-bottom: 2rem;
   }
 
-  .banner-container {
-    margin-bottom: 9rem;
-  }
-  #map {
-    display: none;
-  }
 }
 
 // Small devices (landscape phones, 576px and up)
@@ -133,17 +126,3 @@
     height: 200px;
   }
 }
-
-// .card-title {
-//   position: absolute;
-//   bottom: 10px;
-//   padding: 5px 10px 0px;
-//   background-color: green;
-//   // margin: 0 5px 10px 0;
-//   border-radius: 5px;
-//   font-family: $lovelo;
-// }
-
-
-
-// box shadow box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
