--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,23 +9,10 @@
 @import "mixins/media";
 
 // Your CSS partials
+@import "layouts/index";
 @import "components/index";
 @import "pages/index";
 
 a {
   text-decoration: none;
-}
-
-.page-title {
-  color: $yellow;
-  position: absolute;
-  top: 2rem;
-  left: 3rem;
-  font-size: 4rem;
-}
-
-.page-banner {
-  height: 40vh;
-  background-size: cover;
-  background-position: center bottom;
 }
