--- a/app/assets/stylesheets/mixins/_media.scss
+++ b/app/assets/stylesheets/mixins/_media.scss
@@ -1,10 +1,10 @@
 
 @mixin media($query) {
   @if $query == tabletAndUp {
-    @media (min-width: 48rem) { @content; }
+    @media (min-width: 768px) { @content; }
   }
 
   @if $query == laptopAndUp {
-    @media (min-width: 64rem) {@content;}
+    @media (min-width: 1200px) {@content;}
   }
 }
