styled about-us page

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -35,3 +35,9 @@
 .btn-create {
   margin: 10px 0;
 }
+
+.button-rounded {
+  border-radius: 20px;
+  background-color: #008080;
+  font-weight: bold;
+}
