styled sustainability page

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,9 +1,10 @@
-.navbar-lewagon {
+.navbar-quiz-dog {
   justify-content: space-between;
   background: white;
+  padding: 0.4rem 0;
 }
 
-.navbar-lewagon .navbar-collapse {
+.navbar-quiz-dog .navbar-collapse {
   flex-grow: 0;
 }
 
@@ -13,5 +14,5 @@
 }
 
 .navbar-logo {
-  width: 6.5rem;
+  width: 7.5rem;
 }
