--- a/app/views/pages/about_us.html.erb
+++ b/app/views/pages/about_us.html.erb
@@ -38,7 +38,7 @@
 <hr class="dividing-line-black">
 
 <div class="container-fluid quizzing-dogs-section">
-  <div>
+  <div class="d-flex flex-column align-items-center">
     <h2>LET QUIZZING DOGS APPLY</h2>
     <div class="text-bubble text-bubble-peach">
       <p>
@@ -54,3 +54,5 @@
     <%= image_tag("about_us/10.jpg", alt: "three quizmasters posing on stage") %>
   </div>
 </div>
+
+<div class="space-one-rem"></div>
