--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -171,7 +171,7 @@
       <div class="carousel-item" data-about-carousel-target="card2">
         <div class="card category-card about-card col-lg-3 col-md-6 col-sm-12 border-0 bg-transparent">
           <%= link_to sustainability_path do %>
-          <%= image_tag("landing_page/about_section/10.jpg", class: "card-img", alt: "Card image") %>
+          <%= image_tag("sustainability/10.jpg", class: "card-img", alt: "Card image") %>
           <div class="card-img-overlay category-card-image">
             <h4 class="card-title font-weight-bold">SUSTAINABILITY</h4>
           </div>
