--- a/app/views/pages/sustainability.html.erb
+++ b/app/views/pages/sustainability.html.erb
@@ -1,21 +1,51 @@
-<div id="sustainability-section" class="d-flex flex-column align-items-center container-fluid">
-  <div class="col-lg-8 col-md-8 col-sm-12 d-flex flex-column align-items-center">
-    <h1>SUSTAINABILITY</h1>
-    <h4>Carbon Footprintp</h4>
-    <div class="text-bubble-green">
-      <p class="mb-0">
-        We take our environmental duties very seriously here at Quiz Dog. Between answer sheets and ink for picture rounds, the carbon footprint of a quiz can expand to those sasquatch prints in the snow.
+<div class="banner-container">
+  <div class="page-banner banner-image-sustainability">
+    <h1 class="page-title title-sustainability">SUSTAINABILITY</h1>
+  </div>
+</div>
+
+<div class="container d-flex justify-content-center">
+  <h2 class="text-align-center">CARBON (PAW)FOOTPRINT</h2>
+</div>
+
+<div class="container">
+  <div class="text-bubble text-bubble-peach">
+    <p> We take our environmental duties very seriously here at Quiz Dog. Between answer sheets and ink for picture rounds, the carbon footprint of a quiz can expand to those sasquatch prints in the snow.
         We decided to make a difference and put everything online. No easy task given the access to Google, but with our anti-cheating measures, we are confident we have the greenest events company on the market. We are always looking for ways in which we can go even further with lessening our environmental impact and are striving for complete carbon neutrality.
-      </p>
-    </div>
-    <h4 class="mt-3">Planting trees, ecologi online</h4>
-    <div class="text-bubble-green">
-      <p class="mb-0">
-        One of the ways in which we are doing our bit for mother earth is by promising to plant a tree for every corporate client we have playing the quiz. This is done in partnership with the amazing people over at Ecologi (a B-Corps certificate company).
+    </p>
+    <p class="empty-line"></p>
+    <p> One of the ways in which we are doing our bit for mother earth is by promising to plant a tree for every corporate client we have playing the quiz. This is done in partnership with the amazing people over at Ecologi (a B-Corps certificate company).
         Click here to see how many trees we’ve planted!
-      </p>
+    </p>
+  </div>
+  <div class="sustainability-mobiles-img d-none">
+  <%= image_tag("sustainability/14.jpg", alt: "people quizzing on their phones") %>
+  </div>
+</div>
+
+<hr class="dividing-line-black">
+
+<div class="container d-flex justify-content-center">
+  <h2>PLANTING TREES</h2>
+</div>
+
+<div class="container justify-content-center">
+  <div class="row">
+    <div class="col-8">
+      <div class="text-bubble text-bubble-peach">
+        <p>
+          One of the ways in which we are doing our bit for mother earth
+          is by promising to plant a tree for every corporate client we
+          have playing the quiz. This is done in partnership with the
+          amazing people over at Ecologi (a B-Corps certificate
+          company). Click here to see how many trees we’ve planted!
+        </p>
+      </div>
+    </div>
+    <div class="col-4">
+      <%= image_tag("sustainability/ecologi_logo.jpg", alt: "ecologi logo", class: "ecologi-logo img-fluid") %>
     </div>
   </div>
-<div id="contact-section" class="d-flex flex-column container-lg align-center">
-  <h1 class="d-flex justify-content-center">CONTACT QUIZDOG</h1>
-</div> %>
+</div>
+
+<div class="space-one-rem"></div>
