styled live piano

--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -1,7 +1,7 @@
 <%# top section with banner and punters text %>
 <div class="banner-container">
   <div class="page-banner banner-image-find-us">
-    <h1 class="page-title">FIND US</h1>
+    <h1 class="page-title title-find-us">FIND US</h1>
   </div>
 </div>
 
