--- a/app/assets/stylesheets/pages/_about_us.scss
+++ b/app/assets/stylesheets/pages/_about_us.scss
@@ -5,7 +5,7 @@
 
 .title-about-us {
   color: $peach;
-  -webkit-text-stroke: 2px #973a27; /* For WebKit browsers (Safari, Chrome) */
+  -webkit-text-stroke: 2px #973a27;
 }
 
 .row {
