--- a/app/assets/stylesheets/pages/_venues_index.scss
+++ b/app/assets/stylesheets/pages/_venues_index.scss
@@ -1,4 +1,14 @@
 
+.banner-image-find-us {
+  background-image: url("live_piano_karaoke/8.jpg");
+}
+
+.title-find-us {
+  color: $yellow;
+  font-size: 2.5rem;
+}
+
+
 .punters-text-overlay {
   position: absolute;
   top: 0;
