--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -128,7 +128,7 @@
 
       <div class="carousel-item" data-karaoke-carousel-target="card2">
         <div class="card category-card karaoke-card col-lg-3 col-md-6 col-sm-12 border-0 bg-transparent">
-          <%= link_to corporate_karaoke_path do %>
+          <%= link_to live_piano_karaoke_path do %>
           <%= image_tag("landing_page/karaoke_section/8.jpg", class: "card-img", alt: "Card image") %>
           <div class="card-img-overlay category-card-image">
             <h4 class="card-title font-weight-bold">LIVE PIANO</h4>
