styled corporate and corporate_karaoke pages

--- a/app/assets/stylesheets/pages/_live_piano_karaoke.scss
+++ b/app/assets/stylesheets/pages/_live_piano_karaoke.scss
@@ -2,7 +2,7 @@
   background-image: url("live_piano_karaoke/8.jpg");
 }
 
-.title-live-piano {
+.title-karaoke-orange {
   color: $dog-orange;
   font-size: 2.5rem;
   -webkit-text-stroke: 2px #842c04;
