--- a/app/views/pages/about_us.html.erb
+++ b/app/views/pages/about_us.html.erb
@@ -6,7 +6,7 @@
 </div>
 
 <div class="container d-flex justify-content-center">
-  <h1 class="text-align-center">WHO ARE WE?</h1>
+  <h1>WHO ARE WE?</h1>
 </div>
 
 <div class="container">
