--- a/app/views/pages/corporate.html.erb
+++ b/app/views/pages/corporate.html.erb
@@ -1,5 +1,35 @@
 <div class="banner-container">
-  <div class="banner-image-corporate">
-    <h1 class="page-title">CORPORATE</h1>
+  <div class="page-banner banner-image-corporate">
+    <h1 class="page-title title-corporate">CORPORATE QUIZZES</h1>
   </div>
 </div>
+
+<div class="container d-flex justify-content-center">
+  <h3 class="text-center">"AN EVENT IS NOT OVER UNTIL EVERYONE IS TIRED OF TALKING ABOUT IT" - Mason Cooley</h3>
+</div>
+
+<div class="container">
+  <div class="text-bubble text-bubble-yellow">
+    <p>
+      Standup comedy is good, bands are fun, but there’s no better corporate event than a properly organised quiz.
+      Whether it’s breaking the ice with the new guy, building bridges with sales, or getting into a heated debate about the countries of South America with the CEO, a quiz is the best leveller out there.
+    </p>
+    <p class="empty-line"></p>
+    <p>
+      We are proud to say we tailor each quiz to cater for the wishes of every single client ensuring a roaring good time.
+      Our quizzing technology means we can perform quizzes for many more people than pen and paper,  having hosted fantastic events for 500+ people.
+    </p>
+    <p class="empty-line"></p>
+    <p>
+      To find out more information, including pricing, please contact us here.
+    </p>
+  </div>
+</div>
+
+<hr class="dividing-line-black">
+
+<div class="container d-flex justify-content-start">
+  <h3 class="text-center">WHO WE HAVE HOSTED FOR</h3>
+</div>
+
+<div class="space-one-rem"></div>
