--- a/app/views/pages/corporate_karaoke.html.erb
+++ b/app/views/pages/corporate_karaoke.html.erb
@@ -1,8 +1,28 @@
-<div class="container">
-  <h1>CORPORATE KARAOKE</h1>
-  <h4>INFO</h4>
-  <p>
-    It’s time to become a star! Quiz Dog is far from a one-trick puppy. Make it a work function/private party to remember with our fully trained hosts (each one of them a consummate show-off)! Dancing Queen? Sweet Caroline? Anarchy in the UK? There isn’t a song we can’t provide, so start your vocal exercises, get a bit of Dutch courage, and sing the night away.
-    Please contact us for more information.
-</p>
+<div class="banner-container">
+  <div class="page-banner banner-image-corporate-karaoke">
+    <h1 class="page-title title-karaoke-orange">CORPORATE KARAOKE</h1>
+  </div>
 </div>
+
+<div class="container d-flex justify-content-center">
+  <h1>HOWL THE NIGHT AWAY</h1>
+</div>
+
+<div class="container">
+  <div class="text-bubble text-bubble-orange">
+    <p>
+      It’s time to become a star! Quiz Dog is far from a one-trick puppy. Make it a work function/private party to remember
+      with our fully trained hosts (each one of them a consummate show-off)!
+    </p>
+    <p class="empty-line"></p>
+    <p>
+      Dancing Queen? Sweet Caroline? Anarchy in the UK? There isn’t a song we can’t provide, so start your vocal exercises, get a bit of Dutch courage, and sing the night away.
+    </p>
+  </div>
+</div>
+
+<hr class="dividing-line-black">
+
+<p class="text-center">Please contact us for more information</p>
+
+<div class="space-one-rem"></div>
