--- a/app/views/pages/live_piano_karaoke.html.erb
+++ b/app/views/pages/live_piano_karaoke.html.erb
@@ -1,6 +1,6 @@
 <div class="banner-container">
   <div class="page-banner banner-image-live-piano">
-    <h1 class="page-title title-live-piano">LIVE PIANO KARAOKE</h1>
+    <h1 class="page-title title-karaoke-orange">LIVE PIANO KARAOKE</h1>
   </div>
 </div>
 
