--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -54,7 +54,7 @@
       </div>
       <div class="carousel-item" data-multiple-images-target="card2">
         <div class="card category-card col-lg-3 col-md-6 col-sm-12 border-0 bg-transparent">
-          <%= link_to venues_path do %>
+          <%= link_to corporate_path do %>
           <%= image_tag("landing_page/quizzing_section/3.jpg", class: "card-img", alt: "Card image") %>
           <div class="card-img-overlay category-card-image">
             <h4 class="card-title font-weight-bold">CORPORATE</h4>
