--- a/app/views/pages/contact_us.html.erb
+++ b/app/views/pages/contact_us.html.erb
@@ -1,5 +1,13 @@
+<div class="banner-container">
+  <div class="page-banner">
+    <h1 class="page-title title-red">CONTACT US</h1>
+  </div>
+</div>
 
 <%= simple_form_for @message do |form| %>
   <%= form.input :name %>
+  <%= form.input :email %>
+  <%= form.input :number %>
+  <%= form.input :message %>
   <%= form.button :submit, class: "btn btn-success" %>
 <% end %>
