added skip before action for authentication in messages controller

--- a/app/views/pages/contact_us.html.erb
+++ b/app/views/pages/contact_us.html.erb
@@ -9,5 +9,5 @@
   <%= form.input :email %>
   <%= form.input :number %>
   <%= form.input :message %>
-  <%= form.button :submit, class: "btn btn-success" %>
+  <%= form.button :submit, "Send Message", class: "btn btn-success" %>
 <% end %>
