styled banner for contact us page

--- a/app/views/pages/contact_us.html.erb
+++ b/app/views/pages/contact_us.html.erb
@@ -1,6 +1,10 @@
 <div class="banner-container">
-  <div class="page-banner">
-    <h1 class="page-title title-red">CONTACT US</h1>
+  <div class="page-banner banner-contact-us">
+    <div class="space-one-rem"></div>
+    <div class="col-10 d-flex justify-content-center">
+      <%= image_tag("logos/logo.png", class: "contact-us-logo", alt: "quizdog logo") %>
+    </div>
+    <h1 class="title-contact-us">CONTACT US</h1>
   </div>
 </div>
 
