--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,7 +14,7 @@
     </div>
     <div class="row home-page-buttons justify-content-center mt-3">
       <div class="col-10 d-flex justify-content-center">
-        <%= image_tag("logos/logo.png", class: "logo mb-3 mt-5 img-fluid", alt: "quizmaster logo") %>
+        <%= image_tag("logos/logo.png", class: "logo mb-3 mt-5 img-fluid", alt: "quizdog logo") %>
       </div>
       <%= link_to venues_path do %>
         <div class="col-md-12 col-sm-12 d-flex justify-content-center btn-block">
