--- a/app/assets/stylesheets/layouts/_banner.scss
+++ b/app/assets/stylesheets/layouts/_banner.scss
@@ -8,12 +8,24 @@
   height: 12rem;
   background-size: cover;
 
-  @include media(tabletAndUp) {
-    height: 18rem;
+  @include media(tablet) {
+    height: 16rem;
   }
 
-  @include media(laptopAndUp) {
+  @include media(laptop) {
+    height: 20rem;
+  }
+
+  @include media(desktop) {
     height: 24rem;
+  }
+
+  @include media(large-desktop) {
+    height: 32rem;
+  }
+
+  @include media(extra-large-desktop) {
+    height: 36rem;
   }
 }
 
@@ -23,9 +35,15 @@
   left: 1rem;
   font-size: 3rem;
 
-  @include media(tabletAndUp) {
+  @include media(laptop) {
     top: 2.5rem;
     left: 2rem;
     font-size: 4rem;
+  }
+
+  @include media(large-desktop) {
+    top: 2.5rem;
+    left: 2rem;
+    font-size: 6rem;
   }
 }
