removed references to tabletAndUp and laptopAndUp and changed them to tablet and laptop

--- a/app/assets/stylesheets/components/_quizmaster_card.scss
+++ b/app/assets/stylesheets/components/_quizmaster_card.scss
@@ -8,7 +8,7 @@
     width: 120px;
     border-radius: 50%;
 
-    @include media(tabletAndUp) {
+    @include media(tablet) {
       width: 180px;
     }
   }
