--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -18,7 +18,7 @@
 .bg-img-1 {
   background-image: url('landing_page/main_carousel/14-mobile.jpg'), linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4));
 
-  @include media(tabletAndUp) {
+  @include media(tablet) {
     background-image: url('landing_page/main_carousel/14.jpg'), linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4));
   }
 }
@@ -26,7 +26,7 @@
 .bg-img-2 {
   background-image: url('landing_page/main_carousel/15-mobile.jpg'), linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4));
 
-  @include media(tabletAndUp) {
+  @include media(tablet) {
     background-image: url('landing_page/main_carousel/15.jpg'), linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4));
   }
 }
@@ -34,7 +34,7 @@
 .bg-img-3 {
   background-image: url('landing_page/main_carousel/16-mobile.jpg'), linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4));
 
-  @include media(tabletAndUp) {
+  @include media(tablet) {
     background-image: url('landing_page/main_carousel/16.jpg'), linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4));
   }
 }
@@ -42,7 +42,7 @@
 .bg-img-4 {
   background-image: url('landing_page/main_carousel/17-mobile.jpg'), linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4));
 
-  @include media(tabletAndUp) {
+  @include media(tablet) {
     background-image: url('landing_page/main_carousel/17.jpg'), linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4));
   }
 }
@@ -50,7 +50,7 @@
 .bg-img-5 {
   background-image: url('landing_page/main_carousel/18-mobile.jpg'), linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4));
 
-  @include media(tabletAndUp) {
+  @include media(tablet) {
     background-image: url('landing_page/main_carousel/18.jpg'), linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4));
   }
 }
@@ -58,7 +58,7 @@
 .bg-img-6 {
   background-image: url('landing_page/main_carousel/19-mobile.jpg'), linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4));
 
-  @include media(tabletAndUp) {
+  @include media(tablet) {
     background-image: url('landing_page/main_carousel/19.jpg'), linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4));
   }
 }
@@ -66,7 +66,7 @@
 .bg-img-7 {
   background-image: url('landing_page/main_carousel/20-mobile.jpg'), linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4));
 
-  @include media(tabletAndUp) {
+  @include media(tablet) {
     background-image: url('landing_page/main_carousel/20.jpg'), linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4));
   }
 }
@@ -74,7 +74,7 @@
 .bg-img-8 {
   background-image: url('landing_page/main_carousel/21-mobile.jpg'), linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4));
 
-  @include media(tabletAndUp) {
+  @include media(tablet) {
     background-image: url('landing_page/main_carousel/21.jpg'), linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4));
   }
 }
@@ -82,7 +82,7 @@
 .bg-img-9 {
   background-image: url('landing_page/main_carousel/22-mobile.jpg'), linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4));
 
-  @include media(tabletAndUp) {
+  @include media(tablet) {
     background-image: url('landing_page/main_carousel/22.jpg'), linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4));
   }
 }
@@ -110,7 +110,7 @@
 // Category cards for QUIZZING, KARAOKE and ABOUT US
 
 .section-title {
-  @include media(tabletAndUp) {
+  @include media(tablet) {
     text-align: center;
   }
 
@@ -123,7 +123,7 @@
 .category-card {
   margin: 0;
 
-  @include media(tabletAndUp) {
+  @include media(tablet) {
     margin: 0 2rem;
   }
 }
@@ -178,21 +178,21 @@
 
 // Changes position of carousel controls depending on screen size so that position on card is consistent
 .carousel-control-prev {
-  @include media(tabletAndUp) {
+  @include media(tablet) {
     left: -2.5rem;
   }
 
-  @include media(laptopAndUp) {
+  @include media(laptop) {
     left: 1.5rem;
   }
 }
 
 .carousel-control-next {
-  @include media(tabletAndUp) {
+  @include media(tablet) {
     right: -2.5rem;
   }
 
-  @include media(laptopAndUp) {
+  @include media(laptop) {
     right: 1.5rem;
   }
 }
