--- a/app/assets/stylesheets/components/_separators.scss
+++ b/app/assets/stylesheets/components/_separators.scss
@@ -7,7 +7,7 @@
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
 
-  @include media(tabletAndUp) {
+  @include media(tablet) {
     width: 40%;
   }
 }
