added background-position property to each image in banners to make it look right when hitting breaks

--- a/app/assets/stylesheets/pages/_charity.scss
+++ b/app/assets/stylesheets/pages/_charity.scss
@@ -1,4 +1,5 @@
 
 .banner-image-charity {
   background-image: url('charity/charity_header.jpg'), linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4));
+  background-position: center center;
 }
