--- a/app/assets/stylesheets/pages/_live_piano_karaoke.scss
+++ b/app/assets/stylesheets/pages/_live_piano_karaoke.scss
@@ -1,5 +1,6 @@
 .banner-image-live-piano {
   background-image: url("live_piano_karaoke/8.jpg");
+  background-position: center center;
 }
 
 .title-karaoke-orange {
