--- a/app/assets/stylesheets/pages/_corporate.scss
+++ b/app/assets/stylesheets/pages/_corporate.scss
@@ -2,10 +2,9 @@
 
 .banner-image-corporate {
   background-image: url("corporate/corporate_header.jpg"), linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6));
-  background-position: center bottom;
+  background-position: center center;
 }
 
 .title-corporate {
   color: $yellow;
-  font-size: 2.5rem;
 }
