applied overlapping style to logo in mobile view

--- a/app/views/pages/sustainability.html.erb
+++ b/app/views/pages/sustainability.html.erb
@@ -8,7 +8,7 @@
   <h2 class="text-align-center">CARBON (PAW)FOOTPRINT</h2>
 </div>
 
-<div class="container">
+<div class="container container-anchor-top">
   <div class="text-bubble text-bubble-peach">
     <p> We take our environmental duties very seriously here at Quiz Dog. Between answer sheets and ink for picture rounds, the carbon footprint of a quiz can expand to those sasquatch prints in the snow.
         We decided to make a difference and put everything online. No easy task given the access to Google, but with our anti-cheating measures, we are confident we have the greenest events company on the market. We are always looking for ways in which we can go even further with lessening our environmental impact and are striving for complete carbon neutrality.
@@ -18,9 +18,10 @@
         Click here to see how many trees we’ve planted!
     </p>
   </div>
-  <div class="sustainability-mobiles-img d-none">
+</div>
+
+<div class="sustainability-mobiles-img">
   <%= image_tag("sustainability/14.jpg", alt: "people quizzing on their phones") %>
-  </div>
 </div>
 
 <hr class="dividing-line-black">
@@ -43,7 +44,7 @@
       </div>
     </div>
     <div class="col-4">
-      <%= image_tag("sustainability/ecologi_logo.jpg", alt: "ecologi logo", class: "ecologi-logo img-fluid") %>
+      <%= image_tag("sustainability/ecologi_logo.jpg", alt: "ecologi logo", class: "ecologi-logo") %>
     </div>
   </div>
 </div>
