--- a/app/assets/stylesheets/mixins/_media.scss
+++ b/app/assets/stylesheets/mixins/_media.scss
@@ -1,16 +1,9 @@
 
-// @mixin media($query) {
-//   @if $query == tabletAndUp {
-//     @media (min-width: 768px) { @content; }
-//   }
-
-//   @if $query == laptopAndUp {
-//     @media (min-width: 1200px) { @content; }
-//   }
-// }
-
-
 @mixin media($query) {
+  @if $query == mobile {
+    @media (max-width: 575px) { @content; }
+  }
+
   @if $query == tablet {
     @media (min-width: 576px) { @content; }
   }
