--- a/app/assets/stylesheets/pages/_sustainability.scss
+++ b/app/assets/stylesheets/pages/_sustainability.scss
@@ -8,20 +8,29 @@
   font-size: 2.5rem;
 }
 
-.container {
+.container-anchor-top {
   position: relative;
   z-index: 1;
+  margin-bottom: -1rem;
 }
 
 .sustainability-mobiles-img img {
-  width: 100vw;
-  height: auto;
-  position: absolute;
-  bottom: -20.5rem;
-  z-index: 0;
-}
+    width: 100vw;
+    height: auto;
+    bottom: 0rem;
+    z-index: 0;
+  }
+
 
 .ecologi-logo {
-  width: 8rem;
+  width: 100%;
+  margin-left: 0rem;
+  margin-top: 0rem;
   border-radius: 50%;
+
+  @include media(mobile) {
+    width: 140%;
+    margin-left: -2rem;
+    margin-top: 2rem;
+  }
 }
