--- a/app/assets/stylesheets/pages/_contact_us.scss
+++ b/app/assets/stylesheets/pages/_contact_us.scss
@@ -1,6 +1,6 @@
 
 .banner-contact-us {
-  background-color: #FFEABF;
+  background-color: $dog-beige;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -14,4 +14,36 @@
 .contact-us-logo {
   max-width: 30%;
   height: auto;
+}
+
+.form-container {
+
+  label {
+    font-weight: bold;
+    color: $quiz-dog-red;
+    text-transform: uppercase;
+  }
+
+  .form-control {
+    background-color: $dog-beige;
+  }
+
+
+  @include media(desktop) {
+    margin-right: 1rem;
+  }
+
+  @include media(large-desktop) {
+    margin-right: 2rem;
+  }
+}
+
+.social-message-container {
+    @include media(desktop) {
+    margin-left: 1rem;
+  }
+
+  @include media(large-desktop) {
+    margin-left: 2rem;
+  }
 }
