--- a/app/views/pages/contact_us.html.erb
+++ b/app/views/pages/contact_us.html.erb
@@ -10,16 +10,20 @@
 
 <div class="container">
   <div class="row justify-content-center">
-    <div class="col-sm-12 col-md-6 col-lg-4">
+    <div class="col-sm-12 col-md-6 col-lg-4 form-container">
       <%= simple_form_for @message do |form| %>
         <%= form.input :name %>
         <%= form.input :email %>
         <%= form.input :number %>
         <%= form.input :message %>
-        <%= form.button :submit, "Send Message", class: "btn btn-success" %>
+        <div class="d-flex justify-content-center">
+          <%= form.button :submit, "Send Message", class: "btn button-rounded-red" %>
+        </div>
       <% end %>
+      <div class="space-one-rem"></div>
     </div>
-    <div class="col-sm-12 col-md-6 col-lg-4 text-bubble text-bubble-red d-flex flex-column justify-content-center">
+
+    <div class="col-sm-12 col-md-6 col-lg-4 text-bubble text-bubble-red d-flex flex-column justify-content-center social-message-container">
       <div class="social-media">
         <%= link_to "https://www.instagram.com/quizdog/", target: "_blank" do %>
           <%= image_tag("landing_page/social_media/1.jpg", class: "social-media-img", alt: "Instagram Logo") %>
