renamed color variables to make them consistent

--- a/app/assets/stylesheets/components/_bubbles.scss
+++ b/app/assets/stylesheets/components/_bubbles.scss
@@ -18,11 +18,11 @@
 }
 
 .text-bubble-green {
-  background-color: $quiz-dog-green;
+  background-color: $dog-green;
 }
 
 .text-bubble-peach {
-  background-color: $peach;
+  background-color: $dog-peach;
 }
 
 .text-bubble-orange {
@@ -30,5 +30,5 @@
 }
 
 .text-bubble-red {
-  background-color: $quiz-dog-red;
+  background-color: $dog-red;
 }
