--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -1,6 +1,6 @@
 
 .btn-red {
-  background-color: $quiz-dog-red;
+  background-color: $dog-red;
   border-radius: 5px;
   color: #fff;
   font-family: $lovelo;
@@ -35,6 +35,6 @@
 
 .button-rounded-red {
   border-radius: 20px;
-  background-color: $quiz-dog-red;
+  background-color: $dog-red;
   font-weight: bold;
 }
