--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -9,8 +9,8 @@ $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
 
-$quiz-dog-red: #b92429;
-$quiz-dog-green: #008080;
-$peach: #ff7b60;
+$dog-red: #b92429;
+$dog-green: #008080;
+$dog-peach: #ff7b60;
 $dog-orange: #f4631e;
 $dog-beige: #FFEABF;
