--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -156,7 +156,7 @@
 
 .about-card {
   .card-title {
-    background-color: $peach;
+    background-color: $dog-peach;
     text-align: center;
   }
 }
