--- a/app/assets/stylesheets/pages/_contact_us.scss
+++ b/app/assets/stylesheets/pages/_contact_us.scss
@@ -7,7 +7,7 @@
 }
 
 .title-contact-us {
-  color: $quiz-dog-red;
+  color: $dog-red;
   font-size: 2.5rem;
 }
 
@@ -20,7 +20,7 @@
 
   label {
     font-weight: bold;
-    color: $quiz-dog-red;
+    color: $dog-red;
     text-transform: uppercase;
   }
 
