--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -27,10 +27,12 @@
   margin: 10px 0;
 }
 
-.button-rounded {
+.contact-us-button-blue {
   border-radius: 20px;
+  padding: 10px;
   background-color: #008080;
   font-weight: bold;
+  border: none;
 }
 
 .button-rounded-red {
