--- a/app/views/pages/about_us.html.erb
+++ b/app/views/pages/about_us.html.erb
@@ -38,20 +38,23 @@
 <hr class="dividing-line-black">
 
 <div class="container-fluid quizzing-dogs-section">
-  <div class="d-flex flex-column align-items-center">
-    <h2>LET QUIZZING DOGS APPLY</h2>
-    <div class="text-bubble text-bubble-peach">
-      <p>
-        Do you have the wit and charm to be a quizmaster?
-        Want to be part of something great and fun? Looking
-        for a bit of extra cash while having a jolly good
-        time? Look no further and apply to be a quizmaster today:
-        <button class="button-rounded">Contact Us</button>
-      </p>
+  <div class="row d-flex justify-content-center">
+    <div class="col-sm-12 col-md-6 col-lg-6 d-flex flex-column align-items-center quizzing-dogs-text-container">
+      <h2 class="text-center">LET QUIZZING DOGS APPLY</h2>
+      <div class="text-bubble text-bubble-peach">
+        <p>
+          Do you have the wit and charm to be a quizmaster?
+          Want to be part of something great and fun? Looking
+          for a bit of extra cash while having a jolly good
+          time? Look no further and apply to be a quizmaster today:
+        </p>
+        <p class="empty-line"></p>
+        <button class="contact-us-button-blue">Contact Us</button>
+      </div>
     </div>
-  </div>
-  <div>
-    <%= image_tag("about_us/10.jpg", alt: "three quizmasters posing on stage") %>
+    <div class="quizzing-dogs-image-container col-sm-0 col-md-6 col-lg-6">
+      <%= image_tag("about_us/10.jpg", alt: "three quizmasters posing on stage") %>
+    </div>
   </div>
 </div>
 
