--- a/app/views/pages/corporate.html.erb
+++ b/app/views/pages/corporate.html.erb
@@ -28,8 +28,31 @@
 
 <hr class="dividing-line-black">
 
-<div class="container d-flex justify-content-start">
-  <h3 class="text-center">WHO WE HAVE HOSTED FOR</h3>
+<div class="container d-flex justify-content-center">
+  <h3>WHO WE HAVE HOSTED FOR</h3>
 </div>
 
+<div class="space-one-rem"></div>
+
+<div class="company-logos-container">
+  <%= image_tag "corporate/company_logos/8.jpg", class: "company-logo", alt: "Skin + Me logo" %>
+  <%= image_tag "corporate/company_logos/9.jpg", class: "company-logo", alt: "CBRE logo" %>
+  <%= image_tag "corporate/company_logos/10.jpg", class: "company-logo", alt: "Wagamama logo" %>
+  <%= image_tag "corporate/company_logos/11.jpg", class: "company-logo", alt: "Norges Bank logo" %>
+  <%= image_tag "corporate/company_logos/12.jpg", class: "company-logo", alt: "The Independent logo" %>
+  <%= image_tag "corporate/company_logos/13.jpg", class: "company-logo", alt: "Multiplex logo" %>
+  <%= image_tag "corporate/company_logos/14.jpg", class: "company-logo", alt: "Napster logo" %>
+  <%= image_tag "corporate/company_logos/15.jpg", class: "company-logo", alt: "AON logo" %>
+  <%= image_tag "corporate/company_logos/16.jpg", class: "company-logo", alt: "BNP Paribas logo" %>
+  <%= image_tag "corporate/company_logos/17.jpg", class: "company-logo", alt: "AM Trust logo" %>
+  <%= image_tag "corporate/company_logos/18.jpg", class: "company-logo", alt: "VeraCross logo" %>
+  <%= image_tag "corporate/company_logos/19.jpg", class: "company-logo", alt: "NHS logo" %>
+  <%= image_tag "corporate/company_logos/20.jpg", class: "company-logo", alt: "Good Law Project logo" %>
+  <%= image_tag "corporate/company_logos/21.jpg", class: "company-logo", alt: "Trivial Pursuit logo" %>
+  <%= image_tag "corporate/company_logos/22.jpg", class: "company-logo", alt: "Nintendo logo" %>
+</div>
+
+<div class="space-one-rem"></div>
+<div class="space-one-rem"></div>
+<div class="space-one-rem"></div>
 <div class="space-one-rem"></div>
