--- a/app/views/pages/contact_us.html.erb
+++ b/app/views/pages/contact_us.html.erb
@@ -1,6 +1,6 @@
 <div class="banner-container">
   <div class="page-banner banner-contact-us">
-    <div class="space-one-rem"></div>
+    <div class="empty-space-responsive"></div>
     <div class="col-10 d-flex justify-content-center">
       <%= image_tag("logos/logo.png", class: "contact-us-logo", alt: "quizdog logo") %>
     </div>
@@ -20,7 +20,7 @@
           <%= form.button :submit, "Send Message", class: "btn button-rounded-red" %>
         </div>
       <% end %>
-      <div class="space-one-rem"></div>
+      <div class="empty-space-responsive"></div>
     </div>
 
     <div class="col-sm-12 col-md-6 col-lg-4 text-bubble text-bubble-red d-flex flex-column justify-content-center social-message-container">
