--- a/app/views/pages/corporate.html.erb
+++ b/app/views/pages/corporate.html.erb
@@ -32,8 +32,6 @@
   <h3>WHO WE HAVE HOSTED FOR</h3>
 </div>
 
-<div class="space-one-rem"></div>
-
 <div class="company-logos-container">
   <%= image_tag "corporate/company_logos/8.jpg", class: "company-logo", alt: "Skin + Me logo" %>
   <%= image_tag "corporate/company_logos/9.jpg", class: "company-logo", alt: "CBRE logo" %>
@@ -52,7 +50,26 @@
   <%= image_tag "corporate/company_logos/22.jpg", class: "company-logo", alt: "Nintendo logo" %>
 </div>
 
-<div class="space-one-rem"></div>
-<div class="space-one-rem"></div>
-<div class="space-one-rem"></div>
-<div class="space-one-rem"></div>
+<div class="empty-space-responsive"></div>
+
+<div class="container justify-content-center">
+  <div class="row align-items-center">
+    <div class="shauna-card col-5 col-md-4 col-lg-3">
+      <%= image_tag("quizmasters/1.jpg", alt: "Picture of Shuana Thompson from Multiplex ", class: "shuana-pic") %>
+      <div class="shauna-title-section">
+        <h4> MULTIPLEX </h4>
+        <p class="text-center">Shauna Thompson</p>
+      </div>
+    </div>
+    <div class="text-bubble text-bubble-yellow col-7 col-md-8 col-lg-9">
+      <p>
+        “Lorem ipsum dolor sit amet, consectetur
+          adipiscing elit, sed do eiusmod tempor incididunt
+          ut labore et dolore magna, joe is wicked, Lorem
+          ipsum dolor sit amet, consectetur adipiscing elit,
+          sed do eiusmod tempor incididunt ut labore et
+          dolore magna”
+      </p>
+    </div>
+  </div>
+</div>
