--- a/app/views/pages/corporate_karaoke.html.erb
+++ b/app/views/pages/corporate_karaoke.html.erb
@@ -25,4 +25,4 @@
 
 <p class="text-center">Please contact us for more information</p>
 
-<div class="space-one-rem"></div>
+<div class="empty-space-responsive"></div>
