--- a/app/assets/stylesheets/components/_bubbles.scss
+++ b/app/assets/stylesheets/components/_bubbles.scss
@@ -2,6 +2,7 @@
   padding: 1rem;
   border-radius: 10px;
   text-align: center;
+  height: fit-content;
 
   @include media(tablet) {
     padding: 1.5rem;
