--- a/app/assets/stylesheets/pages/_corporate.scss
+++ b/app/assets/stylesheets/pages/_corporate.scss
@@ -17,13 +17,17 @@
   background-color: white;
 
   img {
-    width: 10rem;
+    width: 13rem;
     height: 4rem;
     object-fit: cover;
 
     @include media(tablet) {
       height: 5rem;
     }
+  }
+
+  .logo-paribas {
+    width: 8rem;
   }
 }
 
@@ -57,4 +61,44 @@
       margin-bottom: 5px;
     }
   }
+}
+
+.corporate-sustainability {
+  position: relative;
+  z-index: 1;
+}
+
+.corporate-sustainability-img {
+  width: 200%;
+  height: 9rem;
+  object-fit: cover;
+  margin-top: -1rem;
+  z-index: 0;
+
+  @include media(tablet) {
+    width: 160%;
+    height: 12rem;
+  }
+
+  @include media(desktop) {
+    width: 180%;
+    height: 18rem;
+  }
+
+  @include media(large-desktop) {
+    width: 100%;
+    height: 20rem;
+  }
+}
+
+.corporate-virtual {
+  position: relative;
+  z-index: 1;
+}
+
+.corporate-virtual-img {
+  width: 100%;
+  object-fit: cover;
+  margin-top: -1rem;
+  z-index: 0;
 }
