--- a/app/views/pages/corporate.html.erb
+++ b/app/views/pages/corporate.html.erb
@@ -5,11 +5,11 @@
 </div>
 
 <div class="container d-flex justify-content-center">
-  <h3 class="text-center">"AN EVENT IS NOT OVER UNTIL EVERYONE IS TIRED OF TALKING ABOUT IT" - Mason Cooley</h3>
+  <h3 class="text-center col-12 col-md-8 col-lg-8 mx-auto">"AN EVENT IS NOT OVER UNTIL EVERYONE IS TIRED OF TALKING ABOUT IT" - Mason Cooley</h3>
 </div>
 
 <div class="container">
-  <div class="text-bubble text-bubble-yellow">
+  <div class="text-bubble text-bubble-yellow col-12 col-md-8 col-lg-8 mx-auto">
     <p>
       Standup comedy is good, bands are fun, but there’s no better corporate event than a properly organised quiz.
       Whether it’s breaking the ice with the new guy, building bridges with sales, or getting into a heated debate about the countries of South America with the CEO, a quiz is the best leveller out there.
@@ -41,7 +41,7 @@
   <%= image_tag "corporate/company_logos/13.jpg", class: "company-logo", alt: "Multiplex logo" %>
   <%= image_tag "corporate/company_logos/14.jpg", class: "company-logo", alt: "Napster logo" %>
   <%= image_tag "corporate/company_logos/15.jpg", class: "company-logo", alt: "AON logo" %>
-  <%= image_tag "corporate/company_logos/16.jpg", class: "company-logo", alt: "BNP Paribas logo" %>
+  <%= image_tag "corporate/company_logos/16.jpg", class: "company-logo logo-paribas", alt: "BNP Paribas logo" %>
   <%= image_tag "corporate/company_logos/17.jpg", class: "company-logo", alt: "AM Trust logo" %>
   <%= image_tag "corporate/company_logos/18.jpg", class: "company-logo", alt: "VeraCross logo" %>
   <%= image_tag "corporate/company_logos/19.jpg", class: "company-logo", alt: "NHS logo" %>
@@ -54,14 +54,14 @@
 
 <div class="container justify-content-center">
   <div class="row align-items-center">
-    <div class="shauna-card col-5 col-md-4 col-lg-3">
+    <div class="shauna-card col-4 col-md-3 col-lg-2">
       <%= image_tag("quizmasters/1.jpg", alt: "Picture of Shuana Thompson from Multiplex ", class: "shuana-pic") %>
       <div class="shauna-title-section">
         <h4> MULTIPLEX </h4>
         <p class="text-center">Shauna Thompson</p>
       </div>
     </div>
-    <div class="text-bubble text-bubble-yellow col-7 col-md-8 col-lg-9">
+    <div class="text-bubble text-bubble-yellow col-6 col-md-7 col-lg-8">
       <p>
         “Lorem ipsum dolor sit amet, consectetur
           adipiscing elit, sed do eiusmod tempor incididunt
@@ -73,3 +73,52 @@
     </div>
   </div>
 </div>
+
+<hr class="dividing-line-black">
+
+<div class="container corporate-sustainability justify-content-center">
+  <div class="d-flex justify-content-center">
+    <h3>SUSTAINABILITY</h3>
+  </div>
+  <div class="text-bubble text-bubble-yellow col-12 col-md-8 col-lg-8 mx-auto">
+    <p>
+      We know that sustainability is important to every company. We can help your
+      company go the extra mile at your company event with our sustainable online answer sheets.
+      See what else we are doing to improve our carbon footprint here.
+    </p>
+  </div>
+</div>
+
+<%= image_tag "corporate/corporate_sustainability.jpg", class: "corporate-sustainability-img", alt: "Corporate quiz event" %>
+
+<hr class="dividing-line-black">
+
+<div class="container corporate-virtual">
+  <div class="row flex-column align-items-center">
+    <div class="d-flex justify-content-center">
+      <h3>VIRTUAL</h3>
+    </div>
+    <div class="text-bubble text-bubble-yellow col-12 col-md-8 col-lg-8">
+      <p>
+        Just because your workforce is spread across the world is absolutely no reason why
+        you can’t enjoy a good quiz. We have hosted huge events of well over a 200
+        people on Zoom and lockdown meant we had plenty of time to hone the event to a fine art!
+      </p>
+      <p class="empty-line"></p>
+      <p>
+        All you need is a computer and a camera, and away we go.
+      </p>
+      <p class="empty-line"></p>
+      <p>
+        We also have options of hybrid quizzes where half the contestants are there in
+        person, the other half playing online.
+      </p>
+      <p class="empty-line"></p>
+      <p>
+        For more information, please contact us.
+      </p>
+    </div>
+  </div>
+</div>
+
+<%= image_tag "corporate/corporate_virtual.jpg", class: "corporate-virtual-img", alt: "Quizzing on a laptop" %>
