--- a/app/views/pages/contact_us.html.erb
+++ b/app/views/pages/contact_us.html.erb
@@ -9,7 +9,7 @@
 </div>
 
 <div class="container">
-  <div class="row justify-content-center">
+  <div class="row justify-content-center align-items-center">
     <div class="col-sm-12 col-md-6 col-lg-4 form-container">
       <%= simple_form_for @message do |form| %>
         <%= form.input :name %>
