added elements to charity page

--- a/app/views/pages/charity.html.erb
+++ b/app/views/pages/charity.html.erb
@@ -4,3 +4,24 @@
     <h1 class="page-title">CHARITY</h1>
   </div>
 </div>
+
+<div class="container charity-reach-out">
+  <div class="d-flex justify-content-center">
+    <h3>REACH OUT</h3>
+  </div>
+  <div class="text-bubble text-bubble-yellow col-12 col-md-8 col-lg-8 mx-auto">
+    <p>We work very closely with charities and have host many fundraisers. If you’d like to start a conversation, please contact us. </p>
+  </div>
+</div>
+
+<hr class="dividing-line-black">
+
+<div class="container charity-we-support">
+  <div class="d-flex justify-content-center">
+    <h3>WE SUPPORT</h3>
+  </div>
+  <div class="col-12 col-md-8 col-lg-8 mx-auto d-flex justify-content-evenly">
+    <%= image_tag "charity/24.jpg", class: "charity-logo", alt: "St Giles logo" %>
+    <%= image_tag "charity/25.jpg", class: "charity-logo", alt: "Macmillan logo" %>
+  </div>
+</div>
