--- a/app/assets/stylesheets/pages/_charity.scss
+++ b/app/assets/stylesheets/pages/_charity.scss
@@ -3,3 +3,8 @@
   background-image: url('charity/charity_header.jpg'), linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4));
   background-position: center center;
 }
+
+.charity-logo {
+  width: 8rem;
+  border-radius: 10px;
+}
