fixed issues with corporate

--- a/app/views/pages/about_us.html.erb
+++ b/app/views/pages/about_us.html.erb
@@ -37,7 +37,7 @@
 
 <hr class="dividing-line-black">
 
-<div class="container-fluid quizzing-dogs-section">
+<div class="container justify-content-center quizzing-dogs-section">
   <div class="row d-flex justify-content-center">
     <div class="col-sm-12 col-md-6 col-lg-6 d-flex flex-column align-items-center quizzing-dogs-text-container">
       <h2 class="text-center">LET QUIZZING DOGS APPLY</h2>
