--- a/app/assets/stylesheets/pages/_corporate.scss
+++ b/app/assets/stylesheets/pages/_corporate.scss
@@ -66,29 +66,32 @@
 .corporate-sustainability {
   position: relative;
   z-index: 1;
+
 }
 
+
+
 .corporate-sustainability-img {
-  width: 200%;
-  height: 9rem;
-  object-fit: cover;
+  width: 100%;
+  height: auto;
   margin-top: -1rem;
   z-index: 0;
 
-  @include media(tablet) {
-    width: 160%;
-    height: 12rem;
-  }
 
-  @include media(desktop) {
-    width: 180%;
-    height: 18rem;
-  }
+  // @include media(tablet) {
+  //   width: 160%;
+  //   height: 12rem;
+  // }
 
-  @include media(large-desktop) {
-    width: 100%;
-    height: 20rem;
-  }
+  // @include media(desktop) {
+  //   width: 180%;
+  //   height: 18rem;
+  // }
+
+  // @include media(large-desktop) {
+  //   width: 100%;
+  //   height: 20rem;
+  // }
 }
 
 .corporate-virtual {
