added all elements to charity page

--- a/app/assets/stylesheets/pages/_charity.scss
+++ b/app/assets/stylesheets/pages/_charity.scss
@@ -4,7 +4,15 @@
   background-position: center center;
 }
 
+.title-charity {
+  color: $yellow;
+}
+
 .charity-logo {
   width: 8rem;
   border-radius: 10px;
+}
+
+.lightbulb-logo {
+  object-fit: cover;
 }
