--- a/app/views/pages/charity.html.erb
+++ b/app/views/pages/charity.html.erb
@@ -1,7 +1,7 @@
 
 <div class="banner-container">
   <div class="page-banner banner-image-charity">
-    <h1 class="page-title">CHARITY</h1>
+    <h1 class="page-title title-charity">CHARITY QUIZZES</h1>
   </div>
 </div>
 
@@ -24,4 +24,15 @@
     <%= image_tag "charity/24.jpg", class: "charity-logo", alt: "St Giles logo" %>
     <%= image_tag "charity/25.jpg", class: "charity-logo", alt: "Macmillan logo" %>
   </div>
+  <div class="col-4 mx-auto">
+    <%= image_tag "charity/charity_lightbulb.jpg", class: "lightbulb-logo img-fluid", alt: "a lightbulb" %>
+  </div>
 </div>
+
+<hr class="dividing-line-black">
+
+<div class="d-flex justify-content-center">
+  <%= link_to "contact us", contact_us_path %>
+</div>
+
+<div class="empty-space-responsive"></div>
