--- a/app/views/pages/contact_us.html.erb
+++ b/app/views/pages/contact_us.html.erb
@@ -4,7 +4,7 @@
     <div class="col-10 d-flex justify-content-center">
       <%= image_tag("logos/logo.png", class: "contact-us-logo", alt: "quizdog logo") %>
     </div>
-    <h1 class="title-contact-us">CONTACT US</h1>
+    <h1 class="page-title title-contact-us">CONTACT US</h1>
   </div>
 </div>
 
