--- a/app/views/pages/private.html.erb
+++ b/app/views/pages/private.html.erb
@@ -1,3 +1,9 @@
+<div class="banner-container">
+  <div class="page-banner banner-image-private">
+    <h1 class="page-title title-charity">PRIVATE QUIZZES</h1>
+  </div>
+</div>
+
 <div class="container">
   <h1>PRIVATE</h1>
   <p>
